fix: reduce number of warnings