@@ -19,8 +19,7 @@ public class NodeTypeDisplayNameTest {
     public void canGetNodeTypeNames() {
         var registeredNodeTypes = NodeType.REGISTRY.getEntries()
             .stream()
-            .map(NodeTypesController.NodeTypeInfo::new)
-            .collect(toList());
+            .map(NodeTypesController.NodeTypeInfo::new).toList();
         for (var entry: registeredNodeTypes) {
             // for some reason this doesnt work on gh, but it works locally fine for at least 2 people
             // Assertions.assertEquals(entry.displayName(), NodeTypesController.ENGLISH_DISPLAY_NAMES.get(entry.name()));
